--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    margin: 0;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -16,7 +17,8 @@ section {
 
 .name-image {
     width: 50%;
-    padding-left: 10px;
+    padding-left: 48px;
+
 }
 
 .name-image img {
@@ -30,4 +32,10 @@ section {
     background-image: linear-gradient(orange, tomato);
     padding: 10px 40px;
     border-radius: 5px;
+}
+
+.banner {
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+
 }
