--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1 {
     color: orange;
 }
 
-section {
+.section-flex {
     display: flex;
     margin-bottom: 100px;
 }
@@ -20,6 +20,10 @@ section {
     width: 50%;
     padding: 20px;
 
+}
+
+.orange-color {
+    color: orange;
 }
 
 .name-image img {
@@ -31,7 +35,7 @@ section {
     color: white;
     font-weight: 700;
     background-image: linear-gradient(orange, tomato);
-    padding: 10px 40px;
+    padding: 10px;
     border-radius: 5px;
 }
 
@@ -45,4 +49,38 @@ section {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.shadow {
+    box-shadow: 10px 10px 40px gray;
+    padding: 40px;
+    margin-left: 40px;
+    margin-right: 40px;
+    width: 50%;
+    padding: 50px;
+
+}
+
+.experience {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.blue-border {
+    border-left: 7px solid blue;
+}
+
+.orange-border {
+    border-left: 7px solid rgb(255, 38, 0);
+}
+
+footer {
+    text-align: center;
+    font-weight: 700;
+}
+
+
+.me {
+    color: red;
 }
